Move CLST 301 project to root to fix routing

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-<title>Mark Jennings</title>
-<link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-<div>// Under construction</div>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CLST 301 Word Tester</title>
+    <style>body {padding: 0; margin: 0;}</style>
+  </head>
+  <body>
+    <div id='app'></div>
+    <noscript>This application requires JavaScript to run</noscript>
+  <script type="text/javascript" src="/app.min.js"></script></body>
 </html>
